# cicd_test

./: CMakeLists.txt
.github/workflows/: build.yml
src/: main.cpp
